--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,21 +15,23 @@
   }
 }
 @layer components {
-  .bth {
+  .btn {
     @apply flex gap-2 items-center text-sm text-white py-4 px-4 rounded-md;
   }
   .input {
-    @apply border border-slate-800 bg-slate-700 bg-transparent p-2 placeholder:text-white rounded-md outline-none focus:border-slate-300;
+    @apply border border-slate-800 
+    bg-slate-700 bg-transparent p-2 placeholder:text-white placeholder:text-sm
+    rounded-md outline-none focus:border-slate-300;
   }
   .container {
     @apply max-w-[1000px];
   }
 }
 @layer utilities {
-  .bth-red {
+  .btn-red {
     @apply bg-rose-900 hover:bg-rose-800
   }
-  .bth-green {
+  .btn-green {
     @apply bg-green-600 hover:bg-green-800
   }
 }
