--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
   body {
     @apply text-sm;
@@ -16,7 +15,8 @@
 }
 @layer components {
   .btn {
-    @apply flex gap-2 items-center text-sm text-white py-4 px-4 rounded-md;
+    @apply flex gap-2 items-center text-sm text-white py-4 px-4 rounded-md
+    disabled:bg-gray-400 disabled:cursor-not-allowed disabled:hover:bg-gray-400;
   }
   .input {
     @apply border border-slate-800 
@@ -29,9 +29,9 @@
 }
 @layer utilities {
   .btn-red {
-    @apply bg-rose-900 hover:bg-rose-800
+    @apply bg-rose-900 hover:bg-rose-800;
   }
   .btn-green {
-    @apply bg-green-600 hover:bg-green-800
+    @apply bg-green-600 hover:bg-green-800;
   }
 }
