--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,8 +19,7 @@
     disabled:bg-gray-400 disabled:cursor-not-allowed disabled:hover:bg-gray-400;
   }
   .input {
-    @apply border border-slate-700 
-    bg-slate-700 bg-transparent p-2 placeholder:text-white placeholder:text-sm
+    @apply border bg-slate-700 p-2 placeholder:text-white placeholder:text-sm
     rounded-md outline-none focus:border-slate-300;
   }
   .container {
